BUGFIX: add 'overflow: hidden' to css rule animal box to contain images floating into about me div

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 
 .animal-box {
-  border: 3px solid black;
+  /* border: 3px solid black; */
+  font-size: 20px;
+  overflow: hidden;
 }
 
 .animal-column1 {
@@ -45,6 +47,14 @@
 
 .color {
   background: red;
+}
+
+.block {
+  display: block;
+}
+
+.about-us {
+  margin-top: 500px;
 }
 
 
